<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <TextView
      android:id="@+id/visitor_score_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/visitor_team"
      android:textSize="25sp"
      android:textColor="@color/colorPrimary"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/visitor_score_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/initial_score"
      android:layout_marginTop="15dp"
      android:textSize="35sp"
      android:textColor="@color/colorPrimaryDark"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/visitor_score_label" />

  <Button
      android:id="@+id/decrement_visitor_button"
      android:layout_width="70dp"
      android:layout_height="45dp"
      android:layout_margin="15dp"
      android:textColor="@android:color/white"
      android:background="@color/colorPrimary"
      android:text="@string/decrement"
      app:layout_constraintBottom_toBottomOf="@id/visitor_score_text"
      app:layout_constraintRight_toLeftOf="@id/visitor_score_text"
      app:layout_constraintTop_toTopOf="@+id/visitor_score_text" />

  <Button
      android:id="@+id/increment_visitor_button"
      android:layout_width="70dp"
      android:layout_height="45dp"
      android:text="@string/increment"
      android:layout_margin="15dp"
      android:textColor="@android:color/white"
      android:background="@color/colorPrimary"
      app:layout_constraintLeft_toRightOf="@id/visitor_score_text"
      app:layout_constraintTop_toTopOf="@id/visitor_score_text"
      app:layout_constraintBottom_toBottomOf="@id/visitor_score_text"
      />

</androidx.constraintlayout.widget.ConstraintLayout>